// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEntries rendering renders expected elements 1`] = `
<div
  className="ListEntries"
  id="test"
  onClick={[Function]}
  role="list"
>
  <div
    className="ListEntries__item  ListEntries__gridItem"
    data-testid="list-item"
    role="listitem"
  >
    <div
      aria-label="Remove test"
      className="ListEntries__icon"
      data-index={0}
      data-testid="remove-item"
      role="button"
      tabIndex="0"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when column is set 1`] = `
<div
  className="ListEntries"
  id="test"
  onClick={[Function]}
  role="list"
>
  <div
    className="ListEntries__item "
    data-testid="list-item"
    role="listitem"
  >
    <div
      aria-label="Remove test"
      className="ListEntries__icon"
      data-index={0}
      data-testid="remove-item"
      role="button"
      tabIndex="0"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when highlightKey is set 1`] = `
<div
  className="ListEntries"
  id="test"
  onClick={[Function]}
  role="list"
>
  <div
    className="ListEntries__item  ListEntries__item--highlight ListEntries__gridItem"
    data-testid="list-item"
    role="listitem"
  >
    <div
      aria-label="Remove test"
      className="ListEntries__icon"
      data-index={0}
      data-testid="remove-item"
      role="button"
      tabIndex="0"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when renderItem is not set 1`] = `
<div
  className="ListEntries"
  id="test"
  onClick={[Function]}
  role="list"
>
  <div
    className="ListEntries__item  ListEntries__gridItem"
    data-testid="list-item"
    role="listitem"
  >
    <div
      aria-label="Remove test"
      className="ListEntries__icon"
      data-index={0}
      data-testid="remove-item"
      role="button"
      tabIndex="0"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when the item has className 1`] = `
<div
  className="ListEntries"
  id="test"
  onClick={[Function]}
  role="list"
>
  <div
    className="ListEntries__item  ListEntries__gridItem"
    data-testid="list-item"
    role="listitem"
  >
    <div
      aria-label="Remove test"
      className="ListEntries__icon"
      data-index={0}
      data-testid="remove-item"
      role="button"
      tabIndex="0"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="TestClass ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;
